--- a/css/style.css
+++ b/css/style.css
@@ -4,30 +4,61 @@
  * what's app - 071 - 7331792
  */
 
-body{
-    margin:0;
+body {
+    margin: 0;
     padding: 0;
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #0b1522;
+    background: #020000;
 }
 
-.heart{
+.heart {
     height: 70px;
     width: 70px;
-    background: #f20044;
-    position: relative;transform: rotate(-45deg);
+    background: #f20000;
+    position: relative;
+    transform: rotate(-45deg);
+    box-shadow: -10px 10px 90px #f20000;
+    animation: heart 0.6s linear infinite;
 }
 
-.heart:before{
+@keyframes heart {
+    0% {
+        transform: rotate(-45deg) scale(1.07);
+    }
+    80% {
+        transform: rotate(-45deg) scale(1.0);
+    }
+    100% {
+        transform: rotate(-45deg) scale(0.8);
+    }
+}
+
+
+.heart:before {
     content: '';
     position: absolute;
     height: 70px;
     width: 70px;
-    background: #f20044;
+    background: #f20000;
     top: -50%;
     border-radius: 50px;
+    box-shadow: -10px -10px 90px #f20000;
 }
 
+
+
+
+.heart:after {
+    content: '';
+    position: absolute;
+    height: 70px;
+    width: 70px;
+    background: #f20000;
+    right: -50%;
+    border-radius: 50px;
+    box-shadow: 10px 10px 90px #f20000;
+
+}
